# postgreat

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  PROGRESS.md  README.md  cliff.toml  cog.toml  mise.toml
.github/workflows/: ci.yml
docs/: 1 - Foundation Tuning - Core Config.md  2 - Proactive Maintenance - Indexes.md  3 - Reactive Maintenance - Vaccuming and Bloat copy.md  3 - Reactive Maintenance - Vaccuming and Bloat.md  4 - Automated Maintenance - Autovacuum & Background Worker.md  50-links  6 - Table and Index Health.md  Example DB Scenario.md  Helpful Commands.md  inception-prompt.md
docs/internal/: 2025-11-19-REVIEW.md  2025-11-19-REVIEW_2.md  22-11-25-code-review.md
src/: checker.rs  config.rs  lib.rs  main.rs  models.rs  reporter.rs
src/analysis/: autovacuum.rs  concurrency.rs  logging.rs  memory.rs  mod.rs  planner.rs  query_parser.rs  wal.rs  workload.rs
src/analysis/table_index/: bloat.rs  indexes.rs  mod.rs
tests/: it_analyze.rs  it_cli_dotenv.rs  it_workload.rs  it_workload_dealloc.rs  it_workload_unavailable.rs  it_workload_visibility.rs
tests/_data/: 00-extensions-and-roles.sql  2-bloat-and-indexes.sql  3-workload.sql
tests/snapshots/: it_analyze__analyze_pg14.snap  it_workload__workload_pg14.snap  it_workload_dealloc__workload_dealloc_pg18.snap  it_workload_unavailable__workload_unavailable_missing_pg18.snap  it_workload_unavailable__workload_unavailable_preload_pg18.snap  it_workload_visibility__workload_visibility_pg18.snap
tests/support/: mod.rs
