[package]
name = "postgreat"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros" ] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
snafu = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
anyhow = "1.0"
itertools = "0.13"
sqlparser = "0.45"

[dev-dependencies]
rstest = "0.23"

[[bin]]
name = "postgreat"
path = "src/main.rs"
